fix youtube embed video mobile layout issue

--- a/css/charles-a37730.webflow.css
+++ b/css/charles-a37730.webflow.css
@@ -327,7 +327,19 @@ body {
   font-size: 2em;
   font-weight: 400;
 }
-
+.embeded-video {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+}
+.embeded-video-frame {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .form-field {
   background-color: #f1f1f1;
   border: 1px solid rgba(0, 0, 0, 0);
